asu_isearch 7.x-1.8
-------------------
- Added dependency on asu_dir_utilities
- First/primary affiliation on a profile is open by default on view
- Research activity links are fixed

asu_isearch 7.x-1.7.1
---------------------
- Added entity load hook to update profile image intermittently on load
- Added limit to number of profiles checked for cleanup daily
- Hotfix for non-primary affiliations being filtered from views

asu_isearch 7.x-1.7
-------------------
- Views exposed contextual filters are now using ajax views functionality
- A to Z index filters are now working
- Added support for industry experience fields
- Cleaned up the logic for grabbing iSearch weights - as of now the weight will only be pulled if less than the title
  rank weight
- Fixed bug where lastname secondary sort is not active while rank sort is active

asu_isearch 7.x-1.6
-------------------
- Fixed bug where image styles aren't updating
- Fixed image styles by removing cropping and using CSS similar to iSearch
- Allows importing of custom sorting from iSearch, this is configurable at /admin/content/isearch/configure
- Added update hook to clear old queued migrations
- Added sane constraints to avoid extremely long cron tasks